--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,13 @@
         <lombok.version>1.18.30</lombok.version>
     </properties>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
         <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>8.0.0.Final</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.1.4</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
